--- a/Zypher/Components/Layout/MainLayout.razor
+++ b/Zypher/Components/Layout/MainLayout.razor
@@ -1,23 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+        <nav id="Logo" class="text-center">
+            <div id="Ueberschrift">
+                <h2>Zypher</h2>
+                <h5>typewriter Challange</h5>
+            </div>
+            <div id="Person">
+                <h2>img</h2>
+            </div>
+        </nav>
     </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
 </div>
