--- a/Zypher/Components/Layout/MainLayout.razor
+++ b/Zypher/Components/Layout/MainLayout.razor
@@ -1,23 +1,34 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.Authentication
+@inject NavigationManager Navigation
+@inject IHttpContextAccessor HttpContextAccessor
+
+<div class="main-layout">
+    <div class="header">
+        <h1>Zypher</h1>
+        <CascadingAuthenticationState>
+        <AuthorizeView>
+            <Authorized>
+                <p>Hello, @context.User.Identity.Name!</p>
+                <button @onclick="GoToStartPage">Home</button>
+            </Authorized>
+            <NotAuthorized>
+                <p>Please <NavLink href="/login">Login</NavLink> or <NavLink href="/register">Register</NavLink> to continue.</p>
+            </NotAuthorized>
+        </AuthorizeView>
+        </CascadingAuthenticationState>
     </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+    <div class="content">
+        @Body 
+    </div>
 </div>
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+@code {
+    private async Task GoToStartPage()
+    {
+        Navigation.NavigateTo("/home"); 
+    }
+}
