--- a/Zypher/Components/Layout/MainLayout.razor
+++ b/Zypher/Components/Layout/MainLayout.razor
@@ -4,12 +4,19 @@
     <main>
         <nav id="Logo" class="text-center">
             <div id="Ueberschrift">
-                <h2>Zypher</h2>
-                <h5>typewriter Challange</h5>
+                <h1>Zypher</h1>
+                <h6>TYPEWRITER CHALLANGE</h6>
             </div>
             <div id="Person">
-                <h2>img</h2>
+                <img alt="img" id="UserIcon" src="img/UserIcon.png"/>
             </div>
         </nav>
+        <div class="body">
+            <p>example</p>
+            <p>example</p>
+            <p>example</p>
+            <p>example</p>
+            <p>example</p>
+        </div>
     </main>
 </div>
