jetzt passt das LAyout

--- a/Zypher/Components/Layout/MainLayout.razor
+++ b/Zypher/Components/Layout/MainLayout.razor
@@ -11,7 +11,7 @@
                 <img alt="img" id="UserIcon" src="img/UserIcon.png"/>
             </div>
         </nav>
-        <div class="body">
+        <div class="bar">
             <p>example</p>
             <p>example</p>
             <p>example</p>
