--- a/Zypher/Components/App.razor
+++ b/Zypher/Components/App.razor
@@ -5,7 +5,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="Zypher.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
@@ -13,8 +14,9 @@
 </head>
 
 <body>
-<Routes @rendermode=RenderMode.InteractiveServer />
-<script src="_framework/blazor.web.js"></script>
+    <Routes @rendermode=InteractiveServer />
+    <script src="_framework/blazor.web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
