--- a/Zypher/Components/Pages/Home.razor
+++ b/Zypher/Components/Pages/Home.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @using Zypher.Services
+@using Zypher.Components.Layout
 @inject UserService UserService
+@layout MainLayout
 
 <h3>Welcome, @username!</h3>
 
