--- a/Zypher/Components/App.razor
+++ b/Zypher/Components/App.razor
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="Zypher.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Special+Elite&display=swap" rel="stylesheet">
     <HeadOutlet/>
 </head>
 
