--- a/Zypher/Components/Pages/Login.razor
+++ b/Zypher/Components/Pages/Login.razor
@@ -3,29 +3,30 @@
 @using Zypher.Components.Layout
 @inject UserService UserService
 @inject NavigationManager NavigationManager
+@inject PopupStateService PopupStateService
 @layout MainLayout
-
 
 <div class="popup-container">
     <h3>Enter Username</h3>
-    
     <input @bind="username" placeholder="Enter your username" />
-    
     <button @onclick="SetUsername">Set Username</button>
-
 </div>
 
 @code {
     private string username;
+
+    protected override void OnInitialized()
+    {
+        PopupStateService.IsPopupActive = true;
+    }
 
     private async Task SetUsername()
     {
         if (!string.IsNullOrEmpty(username))
         {
             await UserService.SetUsernameAsync(username);
-            
+            PopupStateService.IsPopupActive = false;
             NavigationManager.NavigateTo("/");
         }
     }
-
 }
